# space-checkers

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO.md  extract_version.ps1  lint.sh  ubuntu_service.md
.github/workflows/: cmake-single-platform.yml
apple_cmake/: MacBundle.cmake  README.md  macbundle.cmake
cmake/: README.md  macbundle.cmake  testing.cmake
dependencies/: CMakeLists.txt  CPM.cmake  flatbuffers.cmake  gtest.cmake  imgui.cmake  ixwebsocket.cmake  libcpr.cmake  mbedtls.cmake  nlohmann.cmake  protobuf.cmake  sfml.cmake  simdjson.cmake  spdlog.cmake  zlib.cmake
resources/: SpaceCheckers.icns
src/: AppVersion.hpp  CaptureTarget.hpp  CapturedPiece.hpp  Cell.cpp  Cell.hpp  CircularBuffer.hpp  ForcedJump.hpp  GameManager.cpp  GameManager.hpp  GameState.hpp  LocalGameManager.hpp  MainMenu.hpp  OnlineGameManager.hpp  Payloads.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  PlayerType.hpp  ResourcePath.cpp  ResourcePath.hpp  ResourcePath.mm  ServerLocation.hpp  SplashScreen.hpp  StartMenu.cpp  StartMenu.hpp  TODO.md  WsClient.cpp  WsClient.hpp  main.cpp
src/manager/: GameManager.cpp  LocalGameManager.hpp  OnlineGameManager.hpp
src/managers/: GameManager.cpp  LocalGameManager.cpp  LocalGameManager.hpp  OnlineGameManager.cpp  OnlineGameManager.hpp
src/payloads/: MessageType.hpp  Payloads.hpp  ServerStructs.hpp  ServerTypes.hpp  base_payload.pb.cpp  base_payload.pb.hpp
src/proto_schema/: AppVersion.hpp.in  base_payload.proto
src/utils/: CountdownTimer.hpp  ResourcePath.cpp  ResourcePath.mm
tests/: CMakeLists.txt  PieceTests.cpp  PlayerTests.cpp
